--- a/login.html
+++ b/login.html
@@ -2,59 +2,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="res/css/styleL.css">
     <title> Login Page </title>
 
     <style>
-
-
-        button {
-            background-color: #0026ff;
-            width: 100%;
-            color: white;
-            padding: 15px;
-            margin: 10px 0px;
-            border: none;
-            cursor: pointer;
-        }
-
-        input[type=text], input[type=password] {
-            width: 100%;
-            margin: 8px 0;
-            padding: 12px 20px;
-            box-sizing: border-box;
-        }
-
-        button:hover {
-            opacity: 0.6;
-        }
-
-        .container {
-            width: 40%;
-            height: 50%;
-            padding: 75px;
-            margin-right: auto;
-            margin-left: auto;
-            background-color: lightgrey;
-        }
     </style>
-
 </head>
 
-
 <body>
-
 </body>
 </html>
 
-
 <header>
     <section>
-        <div style="text-align: left;">
+        <div style="left; margin-left: 15px;">
             <strong>Home</strong>
         </div>
 
-        <div style="text-align: right;">
-            <img src="res/images/me.png" width="40" height="40" alt="My Image" />
+        <div style="right;">
+            <img src="res/images/me.png" width="40" height="40" alt="My Image" style="float: right; margin-right: 15px;"> 
         </div>
 
     </section>
@@ -79,11 +45,18 @@
     <form action="/page.php" method="get">
         <label for="cname">Please log in: </label><br>
 
-
         <input type="text" placeholder="Email" name="username" required><br>
         <input type="password" placeholder="Password" name="password" required><br>
-        <button type="submit">Login</button><br>
-        <a href="#"> Forgot password? </a><br>
+
+        <button type="button"
+                onclick="window.location.href='file:///C:/Users/triinuto/WebApplicationDevelopmentHW1/index.html';"
+                value="w3docs" />
+        Log in</index.html><br>
+
+        <br>
+        <a href="#"> Forget password? </a><br>
+
 </div>
+
 </form>
 
